--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,7 +1,7 @@
 <footer class="mt-auto border-top align-items-center justify-content-center">
   <div class="d-flex mx-4 px-4 my-3">
     <div>
-      <span class="my-3 text-muted">© 2022 Company, Inc</span>
+      <span class="my-3 text-muted">© {{year}} Company, Inc..</span>
     </div>
     <!-- <div class="nav mx-auto text-center">
       <a class="text-muted me-3" href="#"
@@ -11,10 +11,10 @@
     </div> -->
 
     <div class="nav ms-auto text-center">
-      <a class="text-muted px-3" href="#">Terms</a>
-      <a class="text-muted px-3" href="#">Privacy</a>
-      <a class="text-muted px-3" href="#">Security</a>
-      <a class="text-muted px-3" href="#">Get in Touch</a>
+      <a class="text-muted px-3 text-decoration-none" href="#">Terms</a>
+      <a class="text-muted px-3 text-decoration-none" href="#">Privacy</a>
+      <a class="text-muted px-3 text-decoration-none" href="#">Security</a>
+      <a class="text-muted px-3 text-decoration-none" href="#">Get in Touch</a>
     </div>
   </div>
 </footer>
