--- a/templates/product.html
+++ b/templates/product.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %} {{super}} {% block title %} Medc... {% endblock %}
 {%block content%} {% include 'nav.html' %}
-<div class="container overflow-hidden main_container">
+<div class="container">
   <div class="row text-center loc_card">
     {% for product in products %}
     <div class="col col-md-3">{% include 'card.html' %}</div>
