local registration added, url added on buttons, data encryption added on registration

--- a/app/templates/auth/sign_up.html
+++ b/app/templates/auth/sign_up.html
@@ -14,7 +14,9 @@
             >
           </li>
           <li class="nav-item">
-            <button class="btn btn-info ms-3">Sign In</button>
+            <a href="{{url_for('auth.login')}}">
+              <button class="btn btn-info ms-3">Sign In</button>
+            </a>
           </li>
         </div>
       </div>
@@ -29,28 +31,61 @@
         <h2 class="text-center mb-3">Sign Up</h2>
         <hr class="hr-text w-100 mx-auto" />
       </div>
-      <div class="p-2 align-items-center">
-        <form method="POST" action="{{url_for('auth.register')}}">
+      <div class="p-2 d-flex align-items-center">
+        <form method="POST" action="{{url_for('auth.register')}}" novalidate>
+          {{ form.csrf_token }}
           <div class="d-flex flex-column align-items-center">
             <div class="p-2">
               {{form.first_name.label(class="form-label")}}
-              {{form.first_name(class="form-control mb-3 w-100")}}
+              {{form.first_name(class="form-control mb-3 w-100")}} {% if
+              form.first_name.errors %} {% for error in form.first_name.errors
+              %}
+              <span class="text-danger">{{ error }}</span>
+              {% endfor %} {% endif %}
               <div class="row g-3 align-items-center mb-3">
                 <div class="col-auto">{{form.last_name.label}}</div>
                 <div class="col-auto">
-                  {{form.last_name(class="form-control")}}
+                  {{form.last_name(class="form-control")}} {% if
+                  form.last_name.errors %} {% for error in form.last_name.errors
+                  %}
+                  <span class="text-danger">{{ error }}</span>
+                  {% endfor %} {% endif %}
                 </div>
                 <div class="col-auto">
                   {{form.middle_name.label(class="col-form-label")}}
                 </div>
                 <div class="col-auto">
-                  {{form.middle_name(class="form-control")}}
+                  {{form.middle_name(class="form-control")}} {% if
+                  form.middle_name.errors %} {% for error in
+                  form.middle_name.errors %}
+                  <span class="text-danger">{{ error }}</span>
+                  {% endfor %} {% endif %}
                 </div>
               </div>
-              {{form.email.label(class='mb-1')}}
-              {{form.email(class="form-control mb-2")}}
-              {{form.password.label(class='mb-1')}}
-              {{form.password(class="form-control mb-5")}}
+              <div>
+                {{form.email.label(class='mb-1')}}
+                {{form.email(class="form-control mb-2")}} {% if
+                form.email.errors %} {% for error in form.email.errors %}
+                <span class="text-danger mb-1">{{ error }}</span>
+                {% endfor %} {% endif %}
+              </div>
+              <div>
+                {{form.password.label(class='mt-1 mb-2')}}
+                {{form.password(class="form-control mb-2")}} {% if
+                form.password.errors %} {% for error in form.password.errors %}
+                <li>
+                  <span class="text-danger">{{ error }}</span>
+                </li>
+                {% endfor %} {% endif %}
+              </div>
+              <div>
+                {{form.password_confirm.label(class='mt-1 mb-2')}}
+                {{form.password_confirm(class="form-control mb-2")}} {% if
+                form.password_confirm.errors %} {% for error in
+                form.password_confirm.errors %}
+                <span class="text-danger">{{ error }}</span>
+                {% endfor %} {% endif %}
+              </div>
             </div>
 
             <div class="p-2">
