--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -9,12 +9,12 @@
         >
         <div class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#"
-              >New Customer?</a
-            >
+            <a class="nav-link active" aria-current="page">New Customer?</a>
           </li>
           <li class="nav-item">
-            <button class="btn btn-info ms-3">Create an account</button>
+            <a href="{{url_for('auth.register')}}">
+              <button class="btn btn-info ms-3">Create an account</button>
+            </a>
           </li>
         </div>
       </div>
