--- a/app/templates/auth/find_account.html
+++ b/app/templates/auth/find_account.html
@@ -1,16 +1,42 @@
 {% extends "base.html" %} {{super}} {% block title %} Medc... {% endblock %}
 {%block content%}
 <div class="d-flex flex-column min-vh-100">
+  <div class="container">
+    <div class="navbar navbar-expand-md">
+      <div class="container-fluid">
+        <a class="navbar-brand">
+          <img src="/static/logo.png" /><strong>eDc</strong></a
+        >
+        <div class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link active fw-bold" aria-current="page"
+              >Account Recovery</a
+            >
+          </li>
+          <li class="nav-item">
+            <a href="">
+              <button class="btn btn-info ms-3">Report</button>
+            </a>
+          </li>
+        </div>
+      </div>
+    </div>
+  </div>
   <div class="d-flex justify-content-center align-items-center my-auto">
     <div class="shadow rounded">
+      <div class="d-flex justify-content-center my-3">
+        <img src="/static/search.png" class="find_account_logo" />
+      </div>
       <form action="{{url_for('auth.find_account')}}" method="POST">
-        <div>{{form.gen_label(class='h2 mx-4 my-3')}}</div>
-        <div class="px-5">
-          {{form.email.label(class='h4')}} {{form.email(class="form-control")}}
+        <div class="mx-auto w-75 my-3 text-center">
+          {{form.gen_label(class='h2 fw-bold')}}
+        </div>
+        <div class="mx-auto px-5 w-75">
+          {{form.email(class="form-control fs-5")}}
         </div>
 
-        <div class="d-flex justify-content-center my-3">
-          {{form.search(class="btn btn-primary h5")}}
+        <div class="d-flex justify-content-center my-4">
+          {{form.search(class="btn btn-primary fs-6")}}
         </div>
       </form>
     </div>
