working on account recovery

--- a/app/templates/auth/change_password.html
+++ b/app/templates/auth/change_password.html
@@ -27,7 +27,8 @@
       <div class="d-flex justify-content-center my-3">
         <img src="/static/change_passwd.png" class="find_account_logo" />
       </div>
-      <form action="{{url_for('auth.find_account')}}" method="POST">
+      <form action="{{url_for('auth.change_password')}}" method="POST">
+        {{form.csrf_token }}
         <div class="mx-auto w-75 my-3 text-center">
           {{form.gen_label(class='h2 fw-bold')}}
         </div>
